--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
 {
     "plugins": ["syntax-dynamic-import"],
-    "presets": [
-        [
-            "@babel/preset-react",
-            {
-                "modules": false
-            }
-        ]
-    ]
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
