--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "classnames": "2.2.6",
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.0.2",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
-    "mini-css-extract-plugin": "1.3.8",
     "node-sass": "5.0.0",
     "postcss-loader": "5.0.0",
     "sass-loader": "11.0.1",
