--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -26,6 +27,7 @@
     "jest-junit": "12.0.0",
     "node-sass": "5.0.0",
     "postcss-loader": "5.0.0",
+    "prop-types": "15.7.2",
     "sass-loader": "11.0.1",
     "style-loader": "2.0.0",
     "webpack": "5.23.0",
