--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
+    "lodash": "^4.17.21",
     "node-sass": "5.0.0",
     "postcss-loader": "5.0.0",
     "prop-types": "15.7.2",
