--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "plugins": ["syntax-dynamic-import"],
+    "plugins": ["syntax-dynamic-import", "@babel/plugin-transform-runtime"],
     "presets": ["@babel/preset-env", "@babel/preset-react"]
 }
