--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.1",
+    "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.13.5",
     "@babel/preset-react": "7.12.13",
     "@webpack-cli/init": "1.1.3",
