--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.0.2",
+    "formik": "2.2.6",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
@@ -34,7 +35,8 @@
     "webpack": "5.23.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
+    "webpack-merge": "5.7.3",
+    "yup": "0.32.9"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
