--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "formik": "2.2.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.1",
@@ -22,7 +24,6 @@
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.0.2",
-    "formik": "2.2.6",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-junit": "12.0.0",
@@ -35,8 +36,7 @@
     "webpack": "5.23.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3",
-    "yup": "0.32.9"
+    "webpack-merge": "5.7.3"
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
