--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "start": "webpack serve --config webpack.dev.js",
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
