--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.0.2",
+    "express": "^4.17.1",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-fetch-mock": "3.0.3",
