--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "formik": "2.2.6",
     "lodash": "4.17.21",
+    "next": "10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
@@ -33,6 +34,7 @@
     "jest": "26.6.3",
     "jest-fetch-mock": "3.0.3",
     "jest-junit": "12.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "5.0.0",
     "postcss-loader": "5.0.0",
     "prop-types": "15.7.2",
@@ -46,8 +48,11 @@
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
+    "start:ssr": "next start",
+    "start:dev-ssr": "next dev",
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
+    "build:server": "next build",
     "test": "jest",
     "coverage": "jest --collect-coverage"
   },
