--- a/package.json
+++ b/package.json
@@ -23,18 +23,24 @@
     "@testing-library/react": "11.2.6",
     "@webpack-cli/init": "1.1.3",
     "babel-loader": "8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "classnames": "2.2.6",
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.0.2",
-    "express": "^4.17.1",
+    "eslint": "7.26.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "express": "4.17.1",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
     "jest-fetch-mock": "3.0.3",
     "jest-junit": "12.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "1.6.0",
     "node-sass": "5.0.0",
     "postcss-loader": "5.0.0",
     "prop-types": "15.7.2",
@@ -54,11 +60,15 @@
     "build:prod": "webpack --config webpack.prod.js",
     "build:server": "next build",
     "test": "jest",
-    "coverage": "jest --collect-coverage"
+    "coverage": "jest --collect-coverage",
+    "lint": "eslint src/components/Common/**/*.js --ignore-pattern node_modules/"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alex-zayats/react-app.git"
   },
+  "eslintIgnore": [
+    "*.test.js"
+  ],
   "license": "ISC"
 }
