--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,9 @@
         "react/prop-types": "warn",
         "dot-notation": "warn",
         "object-curly-newline": "warn",
+        "implicit-arrow-linebreak": "warn",
         "jsx-a11y/no-static-element-interactions": "off",
-        "jsx-a11y/click-events-have-key-events": "off"
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-noninteractive-element-interactions": "off"
     }
 }
