--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "build:server": "next build",
     "test": "jest",
     "coverage": "jest --collect-coverage",
-    "lint": "eslint src/components/Common/**/*.js --ignore-pattern node_modules/"
+    "lint": "eslint src/components/**/*.js",
+    "lint:fix": "eslint src/components/**/*.js --fix --quiet"
   },
   "repository": {
     "type": "git",
