task-8: fix import eslint error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,15 @@
         "airbnb",
         "airbnb/hooks"
     ],
+    "settings": {
+        "import/resolver": {
+            "alias": {
+                "map": [
+                    ["src", "./src"]
+                ]
+            }
+        }
+    },
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
