--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@babel/plugin-transform-runtime": "7.13.10",
     "@babel/preset-env": "7.13.5",
     "@babel/preset-react": "7.12.13",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/preset-scss": "1.0.3",
+    "@storybook/react": "6.2.9",
     "@testing-library/react": "11.2.6",
     "@webpack-cli/init": "1.1.3",
     "babel-loader": "8.2.2",
@@ -42,11 +48,11 @@
     "jest-fetch-mock": "3.0.3",
     "jest-junit": "12.0.0",
     "mini-css-extract-plugin": "1.6.0",
-    "node-sass": "5.0.0",
-    "postcss-loader": "5.0.0",
+    "node-sass": "4.14.1",
+    "postcss-loader": "5.3.0",
     "prop-types": "15.7.2",
     "redux-mock-store": "1.5.4",
-    "sass-loader": "11.0.1",
+    "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
     "webpack": "5.23.0",
     "webpack-cli": "4.5.0",
@@ -57,9 +63,11 @@
     "start": "webpack serve --config webpack.dev.js",
     "start:ssr": "next start",
     "start:dev-ssr": "next dev",
+    "start:sb": "start-storybook -p 6006",
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
     "build:server": "next build",
+    "build:sb": "build-storybook",
     "test": "jest",
     "coverage": "jest --collect-coverage",
     "lint": "eslint src/components/**/*.js",
